kubia-manual-with-labels.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia-manual-with-labels
    labels:
      creation_method: manual
      env: prod
spec:
    containers:
    - image: bahalla/kubia
      name: kubia
      ports:
      - containerPort: 8080
        protocol: TCP
