kubia-private.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia-private
    labels:
        app: kubia
spec:
    imagePullSecrets:
        - name: mydockerhubsecret
    containers:
        - name: main
          image: bahalla/kubia
