kubia2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: kubia2
    labels:
        app: kubia2
spec:
    containers:
        - image: bahalla/kubia2
          name: kubia2
