kubia-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia-loadbalancer
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 80000
    selector:
        app: kubia
