kubia-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia-nodeport
spec:
    type: NodePort
    ports:
        - port: 80
          targetPort: 8000
          nodePort: 30001
    selector:
        app: kubia
