kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia-service
spec:
    ports:
        - port: 80
          targetPort: 8000
    selector:
        app: kubia
