kubia2-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubia2-service
spec:
    type: NodePort
    ports:
        - port: 80
          targetPort: 8080
          nodePort: 30002
    selector:
        app: kubia2
