kubia-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: kubia-ingress
spec:
    rules:
        - host: kubia.octo.com
          http:
            paths:
                - path: /
                  backend:
                    serviceName: kubia-nodeport
                    servicePort: 80
